Update to prod umbrel-electrs image

--- a/electrs/docker-compose.yml
+++ b/electrs/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3006
 
   app:
-    image: cookiemonster123/umbrel-electrs:master
+    image: getumbrel/umbrel-electrs:v1.0.2@sha256:3dae686b22b1fdfd72ff058d022045f96cc5116e76f82f435d58f1cfe8f46418
     depends_on:
       - electrs
     restart: on-failure
