--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -7,9 +7,7 @@ services:
       APP_PORT: $APP_CORE_LIGHTNING_PORT
 
   app:
-    build:
-      dockerfile: ${APP_DATA_DIR}/src/Dockerfile
-      context: ${APP_DATA_DIR}/src
+    image: getumbrel/umbrel-core-lightning:v0.1.0@sha256:8586dc018f82f5663a50a11c785ceeb025f9bf1e547372f18de4a1fb3f3641e2
     command: npm run dev:backend
     restart: on-failure
     volumes:
