Update core-lightning and core-lightning-rtl manifests

--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -1,38 +1,45 @@
 manifestVersion: 1
 id: core-lightning-rtl
-category: Finance
+category: Lightning Node Management
 name: Ride The Lightning (Core Lightning)
-version: "0.14.2-beta"
-tagline: Run your personal Lightning Network node
+version: "0.12.3"
+tagline: Mange your Core Lightning node with RTL
 description: >-
-  Run your personal Lightning Network node, and join the future of Bitcoin today.
+  This version of RTL is specifically configured to use your Core Lightning node.
+  
+  RTL provides a full function, device agnostic, web user interface to help
+  manage lightning node operation. It enables full control over your lightning
+  node with rich functionality for Bitcoin base layer and Lightning Network.
+  Some cool features available on RTL are:
 
 
-  The Lightning Network allows ultra cheap and almost instant Bitcoin transactions.
-  By running a Lightning node, you can not only self-custody your Bitcoin on
-  Lightning, but also earn sats by routing payments on the network.
+  - Rich dashboard with two layout options
 
+  - Send/Receive funds on-chain
 
-  Connect Zeus Wallet, Zap, or any other wallet that supports lndconnect
-  to remotely manage and access your node from anywhere.
+  - Rich channel management with advanced features like balance score, circular re-balancing etc.
 
+  - Payments and Invoice management with QR codes
 
-  Powered by LND.
+  - Routing analysis for the payments forwarded
 
+  - Channel backups
 
-  An official app from Umbrel.
-developer: Umbrel
-website: https://umbrel.com
+  - Detailed reports on routing and transaction history
+
+  - Optional Loop interface for submarine swaps
+
+  - Customizable UI with multiple color schemes and dark/light modes
+developer: Shahana and Suheb
+website: https://github.com/Ride-The-Lightning/RTL
 dependencies:
   - core-lightning
-repo: https://github.com/getumbrel/umbrel-lightning
-support: https://community.getumbrel.com/c/bitcoin-and-lightning
+repo: https://github.com/Ride-The-Lightning/RTL
+support: https://github.com/Ride-The-Lightning/RTL/issues/new
 port: 3100
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-  - 4.jpg
-  - 5.jpg
 path: ""
 deterministicPassword: true
