--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,22 +2,22 @@ manifestVersion: 1
 id: core-lightning
 category: Finance
 name: Core Lightning
-version: "0.14.2-beta"
-tagline: Run your personal Lightning Network node
+version: "0.11.1"
+tagline: Run your personal Core Lightning node
 description: >-
-  Run your personal Lightning Network node, and join the future of Bitcoin today.
-
+  Get started with the Lightning network today with Core Lightning — a
+  Lightning Network implementation focusing on spec compliance and performance.
 
   The Lightning Network allows ultra cheap and almost instant Bitcoin transactions.
   By running a Lightning node, you can not only self-custody your Bitcoin on
   Lightning, but also earn sats by routing payments on the network.
 
 
-  Connect Zeus Wallet, Zap, or any other wallet that supports lndconnect
+  Connect Zeus or any other wallet that supports Core Lightning
   to remotely manage and access your node from anywhere.
 
 
-  Powered by LND.
+  Powered by Core Lightning from Elements.
 
 
   An official app from Umbrel.
@@ -33,6 +33,5 @@ gallery:
   - 2.jpg
   - 3.jpg
   - 4.jpg
-  - 5.jpg
 path: ""
 defaultPassword: ""
