--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -30,7 +30,7 @@ services:
         ipv4_address: ${APP_CORE_LIGHTNING_IP}
   
   c-lightning-rest:
-    image: saubyk/c-lightning-rest:0.7.2
+    image: saubyk/c-lightning-rest:0.7.2@sha256:7943ca9bf7b3952e4956b322405890788b6ddda553908c3a284438ef4e616768
     restart: on-failure
     ports:
       - ${APP_CORE_LIGHTNING_REST_PORT}:${APP_CORE_LIGHTNING_REST_PORT}
@@ -45,7 +45,7 @@ services:
         ipv4_address: ${APP_CORE_LIGHTNING_REST_IP}
 
   lightningd:
-    image: elementsproject/lightningd:v0.11.1
+    image: elementsproject/lightningd:v0.11.1@sha256:1e507809a2f669a8bec87d5641c7f6976bec1b5ad08c132713a91328949229a5
     restart: on-failure
     ports:
       - ${APP_CORE_LIGHTNING_DAEMON_PORT}:9735
