--- a/core-lightning-rtl/docker-compose.yml
+++ b/core-lightning-rtl/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3000
 
   rtl:
-    image: shahanafarooqui/rtl:0.12.3
+    image: shahanafarooqui/rtl:0.12.3@sha256:b1327ecfddae5f40c4c985e31c2bc158c4697a274b61bf84acfb27486d05c5bf
     restart: on-failure
     environment:
       PORT: 3000
