Tweak Core Lightning description

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -5,7 +5,7 @@ name: Core Lightning
 version: "0.11.1"
 tagline: Run your personal Core Lightning node
 description: >-
-  Get started with the Lightning network today with Core Lightning — a
+  Get started with the Lightning network today with Core Lightning - a
   Lightning Network implementation focusing on spec compliance and performance.
 
   The Lightning Network allows ultra cheap and almost instant Bitcoin transactions.
@@ -13,7 +13,7 @@ description: >-
   Lightning, but also earn sats by routing payments on the network.
 
 
-  Connect Zeus or any other wallet that supports Core Lightning
+  Connect Zeus or any other wallet that supports Core Lightning's REST interface
   to remotely manage and access your node from anywhere.
 
 
