Use HS for RPC not the app within the Electrs frontend

--- a/electrs/docker-compose.yml
+++ b/electrs/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - electrs
     restart: on-failure
     environment:
-      ELECTRUM_HIDDEN_SERVICE: "${APP_HIDDEN_SERVICE}"
+      ELECTRUM_HIDDEN_SERVICE: "${APP_ELECTRS_RPC_HIDDEN_SERVICE}"
       ELECTRUM_LOCAL_SERVICE: "${DEVICE_DOMAIN_NAME}"
       ELECTRS_HOST: "${APP_ELECTRS_NODE_IP}"
       BITCOIN_HOST: "${APP_BITCOIN_NODE_IP}"
