Fix GRPC typo for lightning-shell, lnmarkets, node-red, satsale and usocial

--- a/lightning-shell/docker-compose.yml
+++ b/lightning-shell/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         BITCOIN_RPC_USER: "${APP_BITCOIN_RPC_USER}"
         BITCOIN_RPC_PASS: "${APP_BITCOIN_RPC_PASS}"
         LND_IP: "${APP_LIGHTNING_NODE_IP}"
-        LND_GPRC_PORT: ${APP_LIGHTNING_NODE_GRPC_PORT}
+        LND_GRPC_PORT: ${APP_LIGHTNING_NODE_GRPC_PORT}
     networks:
       default:
         ipv4_address: $APP_LIGHTNING_SHELL_IP
