--- a/satsale/umbrel-app.yml
+++ b/satsale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: satsale
 category: Finance
 name: SatSale
-version: "0.1.13"
+version: "0.1.13-build-1"
 tagline: Lightweight Bitcoin payment processor
 description: >-
   SatSale is a simple, easily deployable, lightweight Bitcoin payment
