--- a/lnmarkets/docker-compose.yml
+++ b/lnmarkets/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
       LND_IP: $APP_LIGHTNING_NODE_IP
-      LND_GPRC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
+      LND_GRPC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
       BITCOIN_NETWORK: $APP_BITCOIN_NETWORK
       APP_HIDDEN_SERVICE: $APP_HIDDEN_SERVICE
       APP_DOMAIN: $APP_DOMAIN
