--- a/satsale/docker-compose.yml
+++ b/satsale/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       # Lightning node connection details
       LND_DATA_DIR: $APP_LIGHTNING_NODE_DATA_DIR
       LND_HOST: $APP_LIGHTNING_NODE_IP
-      LND_GPRC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
+      LND_GRPC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
       MACAROON_FILE: /lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/invoice.macaroon
       TLS_FILE: /lnd/tls.cert
       APP_PASSWORD: $APP_PASSWORD
