--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_SQUEAKNODE_PORT
 
   web:
-    image: ghcr.io/squeaknode/squeaknode:v0.2.23@sha256:0b950bcc8c733881258628f7a43fa615a0e825fd45cbb455d306405cea5800a6
+    image: ghcr.io/squeaknode/squeaknode:v0.3.3@sha256:021688519fc112bdec5d3e614719a80192065dae569fb85d8f5cd377ee1f9d65
     restart: on-failure
     stop_grace_period: 1m
     ports:
@@ -22,13 +22,13 @@ services:
       SQUEAKNODE_BITCOIN_RPC_PORT: $APP_BITCOIN_RPC_PORT
       SQUEAKNODE_BITCOIN_RPC_USER: $APP_BITCOIN_RPC_USER
       SQUEAKNODE_BITCOIN_RPC_PASS: $APP_BITCOIN_RPC_PASS
-      SQUEAKNODE_BITCOIN_ZEROMQ_HASHBLOCK_PORT: $APP_BITCOIN_ZMQ_HASHBLOCK_PORT
 
       # LND environment variables
-      SQUEAKNODE_LND_HOST: $APP_LIGHTNING_NODE_IP
-      SQUEAKNODE_LND_RPC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
-      SQUEAKNODE_LND_TLS_CERT_PATH: "/lnd/tls.cert"
-      SQUEAKNODE_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
+      SQUEAKNODE_LIGHTNING_BACKEND: "lnd"
+      SQUEAKNODE_LIGHTNING_LND_RPC_HOST: $APP_LIGHTNING_NODE_IP
+      SQUEAKNODE_LIGHTNING_LND_RPC_PORT: $APP_LIGHTNING_NODE_GRPC_PORT
+      SQUEAKNODE_LIGHTNING_LND_TLS_CERT_PATH: "/lnd/tls.cert"
+      SQUEAKNODE_LIGHTNING_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
 
       # Tor environment variables
       SQUEAKNODE_TOR_PROXY_IP: $TOR_PROXY_IP
