--- a/bitfeed/umbrel-app.yml
+++ b/bitfeed/umbrel-app.yml
@@ -2,17 +2,17 @@ manifestVersion: 1
 id: bitfeed
 category: Explorers
 name: Bitfeed
-version: "2.2.1"
-tagline: A live visualization of your node's mempool
+version: "2.3.3"
+tagline: A beautiful mempool visualizer and block explorer
 description: >-
-  A self-hosted version of Bitfeed - the open source mempool & block
-  visualizer available at https://bits.monospace.live.
+  A self-hosted version of Bitfeed - the open source mempool visualizer & block
+  explorer available at https://bitfeed.live.
 
 
   Watch as new transactions drop into your node's mempool, before being packaged into newly mined blocks.
 
 
-  Monitor Bitcoin network activity, explore the composition of the latest block, or simply enjoy a soothing Bitcoin screensaver.
+  Monitor Bitcoin network activity, explore blocks and transactions, or simply enjoy a soothing Bitcoin screensaver.
 developer: Mononaut
 website: https://monospace.live
 dependencies:
