--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         ipv4_address: $APP_LIGHTNING_IP
   
   lnd:
-    image: lightninglabs/lnd:v0.14.2-beta@sha256:8318a24a3ad7319e424253eb56efcbf38e820ebc6d6b6edeec6a8a4e3e9314a0
+    image: lightninglabs/lnd:v0.15.0-beta.rc6@sha256:cdc00ba130b8a2eac1befa4be0173529647434c5ddcb847d5bf590631af84ae7
     command: "${APP_LIGHTNING_COMMAND}"
     user: 1000:1000
     restart: on-failure
