--- a/thunderhub/docker-compose.yml
+++ b/thunderhub/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   web:
     image: apotdevin/thunderhub:v0.13.13@sha256:df8a654ef13ea14944c378827946a5feb7b2dd6ddeda38066d3748edff42adf9
-    user: "1000:1000"
+    user: "${UMBREL_USER_GROUP_ID}"
     restart: on-failure
     stop_grace_period: 1m
     volumes:
