Create standalone node-red app

--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
-id: node-red
+id: node-red-standalone
 category: Automation
-name: "Node-RED (Bitcoin)"
+name: "Node-RED (Standalone)"
 version: "2.0.6-12-build-1"
 tagline: Wire together the Internet of Things
 description: >-
@@ -13,15 +13,9 @@ description: >-
 
 
   The flows created in Node-RED are stored using JSON which can be easily imported and exported for sharing with others. An online flow library allows you to share your best flows with the world.
-
-
-  Warning: Node-RED on Umbrel is able to connect directly to Bitcoin Core, LND and Electrum, due to this you should be careful when installing third-party Node-RED nodes.
 developer: OpenJS Foundation
 website: https://nodered.org
-dependencies:
-  - bitcoin
-  - electrs
-  - lightning
+dependencies: []
 repo: https://github.com/node-red/node-red
 support: https://nodered.org/about/community/slack/
 port: 1880
