--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: node-red-standalone
 category: Automation
 name: "Node-RED (Standalone)"
-version: "2.0.6-12-build-1"
+version: "2.2.2-12"
 tagline: Wire together the Internet of Things
 description: >-
   Node-RED is a visual programming tool for wiring together hardware
@@ -18,7 +18,7 @@ website: https://nodered.org
 dependencies: []
 repo: https://github.com/node-red/node-red
 support: https://nodered.org/about/community/slack/
-port: 1880
+port: 1881
 gallery:
   - 1.jpg
   - 2.jpg
