--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: node-red-standalone
 category: Automation
-name: "Node-RED (Standalone)"
+name: "Node-RED"
 version: "2.2.2-12"
 tagline: Wire together the Internet of Things
 description: >-
