--- a/core-lightning-squeaknode/umbrel-app.yml
+++ b/core-lightning-squeaknode/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
-id: squeaknode
+id: core-lightning-squeaknode
 category: Social
-name: Squeaknode
+name: Squeaknode (Core Lightning)
 version: "0.3.3"
 tagline: A peer-to-peer status feed with Lightning monetization
 description: >-
@@ -17,7 +17,7 @@ developer: Jonathan Zernik
 website: https://squeaknode.org
 dependencies:
   - bitcoin
-  - lightning
+  - core-lightning
 repo: https://github.com/squeaknode/squeaknode
 support: https://github.com/squeaknode/squeaknode/discussions
 port: 12994
