--- a/core-lightning-squeaknode/docker-compose.yml
+++ b/core-lightning-squeaknode/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     ports:
-      - "$APP_CORE_LIGHTNING_SQUEAKNODE_GRPC_PORT:$APP_CORE_LIGHTNING_SQUEAKNODE_GRPC_PORT
+      - "$APP_CORE_LIGHTNING_SQUEAKNODE_GRPC_PORT:$APP_CORE_LIGHTNING_SQUEAKNODE_GRPC_PORT"
     volumes:
       - ${APP_DATA_DIR}/sqk:/sqk
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
