--- a/core-lightning-squeaknode/docker-compose.yml
+++ b/core-lightning-squeaknode/docker-compose.yml
@@ -43,6 +43,7 @@ services:
 
       SQUEAKNODE_SERVER_EXTERNAL_ADDRESS: $APP_CORE_LIGHTNING_SQUEAKNODE_P2P_HIDDEN_SERVICE
       SQUEAKNODE_SERVER_EXTERNAL_PORT: 9555
+      SQUEAKNODE_SERVER_PORT: 9555
 
       DEBUG: "squeaknode:*"
     networks:
