--- a/node-red/umbrel-app.yml
+++ b/node-red/umbrel-app.yml
@@ -15,7 +15,7 @@ description: >-
   The flows created in Node-RED are stored using JSON which can be easily imported and exported for sharing with others. An online flow library allows you to share your best flows with the world.
 
 
-  Warning: Node-RED on Umbrel is able to connect directly to Bitcoin Core, LND and Electrum, due to this you should be careful when installing third-party Node-RED nodes.
+  Warning: Node-RED (Bitcoin) on Umbrel is able to connect directly to Bitcoin Core, LND and Electrum, due to this you should be careful when installing third-party Node-RED nodes.
 developer: OpenJS Foundation
 website: https://nodered.org
 dependencies:
