--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     environment:
       APP_HOST: $APP_NODE_RED_IP
       APP_PORT: $APP_NODE_RED_PORT
+      # Used to allow flows to be publicly exposed
+      PROXY_AUTH_WHITELIST: "/public/*"
+  
   web:
     image: nodered/node-red:2.2.2-12@sha256:7b8e58892801f01af48acfb18c21b845a6f35029e7654ca6e19ba86bbe810d04
     restart: on-failure
