Reply on App Proxy for auth

--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -24,6 +24,6 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: umbrel
-defaultPassword: moneyprintergobrrr
+defaultUsername: ""
+defaultPassword: ""
 torOnly: false
