--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       APP_HOST: $APP_NODE_RED_IP
       APP_PORT: $APP_NODE_RED_PORT
-      # Used to allow flows to be publicly exposed
+      # Used to allow (HTTP In) flows to be publicly exposed
       PROXY_AUTH_WHITELIST: "/public/*"
   
   web:
