--- a/bitcoin/torrc.template
+++ b/bitcoin/torrc.template
@@ -1,6 +1,6 @@
 # Bitcoin Core P2P Hidden Service
 HiddenServiceDir /data/app-$APP_ID-p2p
-HiddenServicePort $APP_BITCOIN_P2P_PORT $APP_BITCOIN_NODE_IP:8334
+HiddenServicePort $APP_BITCOIN_P2P_PORT $APP_BITCOIN_NODE_IP:$APP_BITCOIN_TOR_PORT
 
 # Bitcoin Core RPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rpc
