Split Node-RED to Bitcoin / standalone versions and update to 2.2.2-12 (#38)

--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
-id: node-red
+id: node-red-standalone
 category: Automation
-name: "Node-RED (Bitcoin)"
+name: "Node-RED"
 version: "2.2.2-12"
 tagline: Wire together the Internet of Things
 description: >-
@@ -16,23 +16,17 @@ description: >-
 
   
   Note: If you would like your 'HTTP In' nodes to be accessible without authentication, then prepend your url with '/public/'. E.g. /public/do-something
-
-
-  Warning: Node-RED (Bitcoin) on Umbrel is able to connect directly to Bitcoin Core, LND and Electrum, due to this you should be careful when installing third-party Node-RED nodes.
 developer: OpenJS Foundation
 website: https://nodered.org
-dependencies:
-  - bitcoin
-  - electrs
-  - lightning
+dependencies: []
 repo: https://github.com/node-red/node-red
 support: https://nodered.org/about/community/slack/
-port: 1880
+port: 1881
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: umbrel
-defaultPassword: moneyprintergobrrr
+defaultUsername: ""
+defaultPassword: ""
 torOnly: false
