Consistent tagline punctuation

--- a/woofbot/umbrel-app.yml
+++ b/woofbot/umbrel-app.yml
@@ -3,7 +3,7 @@ id: woofbot
 category: Explorers
 name: WoofBot
 version: "0.1.0"
-tagline: A chatbot for your personal node.
+tagline: A chatbot for your personal node
 description: >-
   WoofBot is a chat bot that runs on your personal Bitcoin node and sends telegram notifications
   based on pre-configured conditions: addresses, transactions, new-blocks and price changes.
