--- a/core-lightning-squeaknode/docker-compose.yml
+++ b/core-lightning-squeaknode/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "$APP_CORE_LIGHTNING_SQUEAKNODE_GRPC_PORT:$APP_CORE_LIGHTNING_SQUEAKNODE_GRPC_PORT"
     volumes:
       - ${APP_DATA_DIR}/sqk:/sqk
-      - ${APP_CORE_LIGHTNING_RPC_FILE_PATH}:/c-lightning/lightning-rpc
+      - ${APP_CORE_LIGHTNING_RPC_FILE_DIR}:/c-lightning/rpc
     user: "1000:1000"
     environment:
       # Bitcoin Core connection details
@@ -25,7 +25,7 @@ services:
 
       # lightning environment variables
       SQUEAKNODE_LIGHTNING_BACKEND: "clightning"
-      SQUEAKNODE_LIGHTNING_CLIGHTNING_RPC_FILE: "/c-lightning/lightning-rpc"
+      SQUEAKNODE_LIGHTNING_CLIGHTNING_RPC_DIR: "/c-lightning/rpc/lightning-rpc"
 
       # Tor environment variables
       SQUEAKNODE_TOR_PROXY_IP: $TOR_PROXY_IP
