--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - --bind-addr=${APP_CORE_LIGHTNING_DAEMON_IP}:9735
       - --addr=statictor:${TOR_PROXY_IP}:29051
       - --tor-service-password=${TOR_PASSWORD}
-      - --rpc-file=${APP_DATA_DIR}/data/lightningd/rpc
+      - --rpc-file=${APP_DATA_DIR}/data/lightningd/rpc/lightning-rpc
       #- --grpc-port=${APP_CORE_LIGHTNING_DAEMON_GRPC_PORT}
     volumes:
       - "${APP_DATA_DIR}/data/lightningd:/data/.lightning"
