--- a/urbit/docker-compose.yml
+++ b/urbit/docker-compose.yml
@@ -1,13 +1,9 @@
 version: "3.3"
 services:
-  app_proxy:
-    environment:
-      APP_HOST: $APP_URBIT_IP
-      APP_PORT: 8090
-
   manager:
-    image: mopfelwinrux/urbit-umbrel:v0.3.0@sha256:09ee4550be66894cc2b763d5cff9a4ed15b13a3c2a298519a857c6542069d8c7
+    image: mopfelwinrux/urbit-umbrel:v0.4.1@sha256:083db8cdb2109f29c65e186b47eeecdacd5d8021ce1c4593cf8a9f945f646171
     ports:
+      - "${APP_URBIT_PORT}:8090"
       - "${APP_URBIT_P2P_PORT}:34343"
     volumes:
       - ${APP_DATA_DIR}/piers:/data/piers
