--- a/urbit/docker-compose.yml
+++ b/urbit/docker-compose.yml
@@ -1,5 +1,10 @@
 version: "3.3"
 services:
+  app_proxy:
+    environment:
+      APP_HOST: $APP_URBIT_IP
+      APP_PORT: 8090
+
   manager:
     image: mopfelwinrux/urbit-umbrel:v0.4.1@sha256:083db8cdb2109f29c65e186b47eeecdacd5d8021ce1c4593cf8a9f945f646171
     ports:
