--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: suredbits-wallet
 category: Finance
 name: Suredbits Wallet
-version: "1.9.1-34-3dc70938"
+version: "1.9.2"
 tagline: A universal DLC wallet
 description: >-
   The Suredbits Wallet is your one stop shop for building Discreet
