--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         ipv4_address: $APP_LIGHTNING_IP
   
   lnd:
-    image: lightninglabs/lnd:v0.15.0-beta.rc6@sha256:0a6fabd235eac34db2fef3203fceefb705290742b050c399228a3a4cca465334
+    image: lightninglabs/lnd:v0.15.0-beta@sha256:d227a9db0727ff56020c8d6604c8c369757123d238ab6ce679579c2dd0d0d259
     command: "${APP_LIGHTNING_COMMAND}"
     user: 1000:1000
     restart: on-failure
