--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     environment:
       LOG_PATH: "/log/"
       BITCOIN_S_HOME: "/home/bitcoin-s/.bitcoin-s/"
-      MEMPOOL_API_URL: "http://umbrel.local:${APP_MEMPOOL_PORT}/api"
+     #MEMPOOL_API_URL: "http://umbrel.local:${APP_MEMPOOL_PORT}/api"
       WALLET_SERVER_API_URL: "http://${APP_SUREDBITS_WALLET_SERVER_IP}:9999/"
       WALLET_SERVER_WS: "ws://${APP_SUREDBITS_WALLET_SERVER_IP}:19999/events"
       TOR_PROXY: socks5://${TOR_PROXY_IP}:${TOR_PROXY_PORT}
