Added PROXY_AUTH_ADD: "false"
Service needs to be publicly accessible to return LNURLS - thus disabling umbrel default password protection - still uses the password generated by umbrel

--- a/sparkkiosk/docker-compose.yml
+++ b/sparkkiosk/docker-compose.yml
@@ -3,7 +3,8 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_SPARKKIOSK_IP
+      PROXY_AUTH_ADD: "false"
+	  APP_HOST: $APP_SPARKKIOSK_IP
       APP_PORT: 21214
 
   web:
