--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3002
 
   web:
-    image: bitcoinscala/wallet-server-ui:1.9.1@sha256:3eb479b106811d523c4e0cfde244949f6c76a27c7d1fe59be9b8b51ba2372649
+    image: bitcoinscala/wallet-server-ui:1.9.2@sha256:8d53cb8bc595d1f55423b63fe40a57728cf359200a3f4409e809b20526833c28
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -17,7 +17,7 @@ services:
     environment:
       LOG_PATH: "/log/"
       BITCOIN_S_HOME: "/home/bitcoin-s/.bitcoin-s/"
-      MEMPOOL_API_URL: "http://umbrel.local:${APP_MEMPOOL_PORT}/api"
+     #MEMPOOL_API_URL: "http://umbrel.local:${APP_MEMPOOL_PORT}/api"
       WALLET_SERVER_API_URL: "http://${APP_SUREDBITS_WALLET_SERVER_IP}:9999/"
       WALLET_SERVER_WS: "ws://${APP_SUREDBITS_WALLET_SERVER_IP}:19999/events"
       TOR_PROXY: socks5://${TOR_PROXY_IP}:${TOR_PROXY_PORT}
@@ -30,7 +30,7 @@ services:
       - walletserver
   
   walletserver:
-    image: bitcoinscala/bitcoin-s-server:1.9.1-34-3dc70938-SNAPSHOT@sha256:1cd82d19059382f740f7b8acbc2d3aaeaf0c1fd7c662bdbc3ef7b97a27ee181f
+    image: bitcoinscala/bitcoin-s-server:1.9.2@sha256:b042c7c32fab2157f93612915f8579695cf1e4d471cdcc32d7eb7aecb0234c34
     user: "1000:1000"
     restart: on-failure
     volumes:
@@ -50,6 +50,7 @@ services:
       BITCOIN_S_BITCOIND_USER: $APP_BITCOIN_RPC_USER
       BITCOIN_S_BITCOIND_PASSWORD: $APP_BITCOIN_RPC_PASS
       BITCOIN_S_SERVER_RPC_PASSWORD: $APP_PASSWORD
+      JAVA_OPTS: "-Xmx756m"
     ports:
       - "$APP_SUREDBITS_WALLET_P2P_PORT:$APP_SUREDBITS_WALLET_P2P_PORT"
     networks:
