--- a/sparkkiosk/docker-compose.yml
+++ b/sparkkiosk/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
+      PROXY_AUTH_ADD: "false"
       APP_HOST: $APP_SPARKKIOSK_IP
       APP_PORT: 21214
 
