Inject init for correct termination signal handling

--- a/ln-visualizer/docker-compose.yml
+++ b/ln-visualizer/docker-compose.yml
@@ -8,6 +8,7 @@ services:
 
   web:
     image: maxkotlan/ln-visualizer-web:v0.0.20@sha256:9e4fff7600666ce27d1c835fa66e4a3fb34aabd7018506d749134baf9e8bc481
+    init: true
     restart: on-failure
     stop_grace_period: 1m
     environment:
@@ -18,6 +19,7 @@ services:
 
   api:
     image: maxkotlan/ln-visualizer-api:v0.0.20@sha256:cfea255f3343dbacf96c5470dcd442f1cc034337dfb46ecfbbc6d5c1978da1a4
+    init: true
     restart: on-failure
     stop_grace_period: 1m
     user: 1000:1000
