--- a/ipfs-podcasting/docker-compose.yml
+++ b/ipfs-podcasting/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_IPFS_PODCASTING_PORT
 
   web:
-    image: ipfspodcasting/podcastnode:v0.5@sha256:aa56c571494323f210677ad4291ffead0fff31a1da1544766557e54b413f43d0
+    image: ipfspodcasting/podcastnode:v0.6
     init: true
     restart: on-failure
     stop_grace_period: 1m
