Added sha digest

--- a/ipfs-podcasting/docker-compose.yml
+++ b/ipfs-podcasting/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_IPFS_PODCASTING_PORT
 
   web:
-    image: ipfspodcasting/podcastnode:v0.6
+    image: ipfspodcasting/podcastnode:v0.6@sha256:773d7c34d452764be973e8bc495990ec47f8042287493997784198c64e924393
     init: true
     restart: on-failure
     stop_grace_period: 1m
