Add separate log folder

--- a/oak-node/docker-compose.yml
+++ b/oak-node/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - $APP_LIGHTNING_NODE_DATA_DIR:/lnd-dir:ro
       - ${APP_DATA_DIR}/data:/data
-      - ${APP_DATA_DIR}/data:/oak/log
+      - ${APP_DATA_DIR}/log:/oak/log
     environment:
       ROCKET_PORT: $APP_OAK_NODE_PORT
       ROCKET_ADDRESS: 0.0.0.0
