Update Suredbits Wallet

--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3002
 
   web:
-    image: bitcoinscala/wallet-server-ui:1.9.2@sha256:8d53cb8bc595d1f55423b63fe40a57728cf359200a3f4409e809b20526833c28
+    image: bitcoinscala/wallet-server-ui:1.9.2-35969c2d-SNAPSHOT
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -30,7 +30,7 @@ services:
       - walletserver
   
   walletserver:
-    image: bitcoinscala/bitcoin-s-server:1.9.2@sha256:b042c7c32fab2157f93612915f8579695cf1e4d471cdcc32d7eb7aecb0234c34
+    image: bitcoinscala/bitcoin-s-server:1.9.2-37-6f6315c1-SNAPSHOT
     user: "1000:1000"
     restart: on-failure
     volumes:
