Update app description

--- a/oak-node/umbrel-app.yml
+++ b/oak-node/umbrel-app.yml
@@ -5,13 +5,11 @@ name: Oak Node
 version: "0.3"
 tagline: Do more with your LND node
 description: >-
-  Oak Node is a self-hosted service that builds on top of LND.
+  Oak Node gives you Scheduled Payments. Now you can send sats to a Lightning Address on a schedule. 
+  Support your favorite content creators every week, every day, or even every block! Up to you.
 
 
-  It features a Scheduled Payments module that let you support your favorite content creators by regularly sending them tips to their Lightning Address.
-
-
-  It also includes an optional bot module, which lets you interact with your Oak Node from a chat interface.
+  Oak Node also includes an optional bot module for more advanced users.
 developer: Carlos
 website: https://oak-node.net
 dependencies:
