Fix DEFAULT_UI_PASSWORD to none

--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       BITCOIN_S_HOME: "/home/bitcoin-s/.bitcoin-s/"
       ORACLE_SERVER_API_URL: "http://${APP_KRYSTAL_BULL_SERVER_IP}:9998/"
       TOR_PROXY: socks5://${TOR_PROXY_IP}:${TOR_PROXY_PORT}
-      DEFAULT_UI_PASSWORD: $APP_PASSWORD
+      DEFAULT_UI_PASSWORD: "none"
       BITCOIN_S_ORACLE_RPC_PASSWORD: $APP_PASSWORD
     networks:
       default:
