--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -8,7 +8,7 @@ description: >-
   Calibre-web is a web app providing a clean interface for browsing, reading and downloading eBooks using an existing Calibre database.
   It is also possible to integrate google drive and edit metadata and your calibre library through the app itself.
 
-  On the initial setup screen, enter /books as your calibre library location. \n Default admin login: Username: admin Password: admin123
+  On the initial setup screen, enter /books as your calibre library location.
 developer: Janeczku
 website: ""
 dependencies: []
