Updated IP and docker volumes

--- a/calibre-web/docker-compose.yml
+++ b/calibre-web/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - DOCKER_MODS=linuxserver/calibre-web:calibre #optional
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-      - ${ROOT_FOLDER_HOST}/media/data/books:/books
+      - ${APP_DATA_DIR}/media/data/books:/books
     ports:
       - 8083:8083
     restart: on-failure
