--- a/calibre-web/docker-compose.yml
+++ b/calibre-web/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-      - ${APP_DATA_DIR}/media/data/books:/books
+      - ${APP_DATA_DIR}/data/books:/books
     ports:
       - 8083:8083
     restart: on-failure
