--- a/bitcoin/torrc.template
+++ b/bitcoin/torrc.template
@@ -1,3 +1,6 @@
+SocksPort   0.0.0.0:9050
+ControlPort 0.0.0.0:29051
+
 # Bitcoin Core P2P Hidden Service
 HiddenServiceDir /data/app-$APP_ID-p2p
 HiddenServicePort $APP_BITCOIN_P2P_PORT $APP_BITCOIN_NODE_IP:$APP_BITCOIN_P2P_PORT
@@ -5,7 +8,3 @@ HiddenServicePort $APP_BITCOIN_P2P_PORT $APP_BITCOIN_NODE_IP:$APP_BITCOIN_P2P_PO
 # Bitcoin Core RPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rpc
 HiddenServicePort $APP_BITCOIN_RPC_PORT $APP_BITCOIN_NODE_IP:$APP_BITCOIN_RPC_PORT
-
-# Bitcoin Core Frontend Hidden Service
-HiddenServiceDir /data/app-$APP_ID
-HiddenServicePort 80 $APP_PROXY_HOSTNAME:$APP_PROXY_PORT
