--- a/lightning/torrc.template
+++ b/lightning/torrc.template
@@ -1,3 +1,8 @@
+SocksPort   0.0.0.0:9050
+ControlPort 0.0.0.0:29051
+
+HashedControlPassword 16:AFF3E3039FFB8B91606ACEFD01CBBD641B605DDBE62709C99225E6548D
+
 # LND REST Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rest
 HiddenServicePort $APP_LIGHTNING_NODE_REST_PORT $APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT
@@ -5,7 +10,3 @@ HiddenServicePort $APP_LIGHTNING_NODE_REST_PORT $APP_LIGHTNING_NODE_IP:$APP_LIGH
 # LND gRPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-grpc
 HiddenServicePort $APP_LIGHTNING_NODE_GRPC_PORT $APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT
-
-# LND Frontend Hidden Service
-HiddenServiceDir /data/app-$APP_ID
-HiddenServicePort 80 $APP_PROXY_HOSTNAME:$APP_PROXY_PORT
