--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_KRYSTAL_BULL_IP
       APP_PORT: 3001
+  
   web:
     image: bitcoinscala/oracle-server-ui:1.9.2@sha256:9b92f448cae7de4044f9a69df3a873f3fce6d27282b1a227c555a26210a063c9
     user: "1000:1000"
@@ -17,7 +18,7 @@ services:
       LOG_PATH: "/log/"
       BITCOIN_S_HOME: "/home/bitcoin-s/.bitcoin-s/"
       ORACLE_SERVER_API_URL: "http://${APP_KRYSTAL_BULL_SERVER_IP}:9998/"
-      TOR_PROXY: socks5://${TOR_PROXY_IP}:${TOR_PROXY_PORT}
+      TOR_PROXY: "socks5://${APP_ID}.tor:9050"
       DEFAULT_UI_PASSWORD: $APP_PASSWORD
       BITCOIN_S_ORACLE_RPC_PASSWORD: $APP_PASSWORD
     networks:
@@ -25,6 +26,7 @@ services:
         ipv4_address: $APP_KRYSTAL_BULL_IP
     depends_on: 
       - oracleserver
+  
   oracleserver:
     image: bitcoinscala/bitcoin-s-oracle-server:1.9.2@sha256:a702308a3134be24cc5612b5255afb66f0296ca932bcd65f4faf96487de4a6e3
     restart: on-failure
@@ -36,3 +38,14 @@ services:
     networks:
       default:
         ipv4_address: $APP_KRYSTAL_BULL_SERVER_IP
+
+  tor:
+    image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
+    user: "1000:1000"
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/torrc:/etc/tor/torrc:ro
+      - ${TOR_DATA_DIR}:/data
+    environment:
+      HOME: "/tmp"
+    hostname: "${APP_ID}.tor"
