Add Tor container to Core Lightningg

--- a/core-lightning/torrc.template
+++ b/core-lightning/torrc.template
@@ -1,7 +1,8 @@
+SocksPort   0.0.0.0:9050
+ControlPort 0.0.0.0:29051
+
+HashedControlPassword 16:AFF3E3039FFB8B91606ACEFD01CBBD641B605DDBE62709C99225E6548D
+
 # Core Lightning REST Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rest
 HiddenServicePort $APP_CORE_LIGHTNING_REST_PORT $APP_CORE_LIGHTNING_REST_IP:$APP_CORE_LIGHTNING_REST_PORT
-
-# Core Lightning Frontend Hidden Service
-HiddenServiceDir /data/app-$APP_ID
-HiddenServicePort 80 $APP_PROXY_HOSTNAME:$APP_PROXY_PORT
