--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -53,13 +53,24 @@ services:
       - --bitcoin-rpcconnect=${APP_BITCOIN_NODE_IP}
       - --bitcoin-rpcuser=${APP_BITCOIN_RPC_USER}
       - --bitcoin-rpcpassword=${APP_BITCOIN_RPC_PASS}
-      - --proxy=${TOR_PROXY_IP}:${TOR_PROXY_PORT}
+      - --proxy=${APP_ID}.tor:9050
       - --bind-addr=${APP_CORE_LIGHTNING_DAEMON_IP}:9735
-      - --addr=statictor:${TOR_PROXY_IP}:29051
-      - --tor-service-password=${TOR_PASSWORD}
+      - --addr=statictor:${APP_ID}.tor:29051
+      - --tor-service-password=tortortor
       #- --grpc-port=${APP_CORE_LIGHTNING_DAEMON_GRPC_PORT}
     volumes:
       - "${APP_DATA_DIR}/data/lightningd:/data/.lightning"
     networks:
       default:
         ipv4_address: ${APP_CORE_LIGHTNING_DAEMON_IP}
+
+  tor:
+    image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
+    user: "1000:1000"
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/torrc:/etc/tor/torrc:ro
+      - ${TOR_DATA_DIR}:/data
+    environment:
+      HOME: "/tmp"
+    hostname: "${APP_ID}.tor"
