--- a/jam/docker-compose.yml
+++ b/jam/docker-compose.yml
@@ -18,12 +18,12 @@ services:
       RESTORE_DEFAULT_CONFIG: 1
       APP_USER: umbrel
       APP_PASSWORD: "${APP_PASSWORD}"
-      jm_tor_control_host: $TOR_PROXY_IP
+      jm_tor_control_host: "${APP_ID}.tor"
       jm_tor_control_port: 29051
-      jm_onion_socks5_host: $TOR_PROXY_IP
-      jm_onion_socks5_port: $TOR_PROXY_PORT
-      jm_socks5_host: $TOR_PROXY_IP
-      jm_socks5_port: $TOR_PROXY_PORT
+      jm_onion_socks5_host: "${APP_ID}.tor"
+      jm_onion_socks5_port: 9050
+      jm_socks5_host: "${APP_ID}.tor"
+      jm_socks5_port: 9050
       jm_rpc_host: $APP_BITCOIN_NODE_IP
       jm_rpc_port: $APP_BITCOIN_RPC_PORT
       jm_rpc_user: $APP_BITCOIN_RPC_USER
@@ -35,3 +35,14 @@ services:
     networks:
       default:
         ipv4_address: $APP_JAM_IP
+
+  tor:
+    image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
+    user: "1000:1000"
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/torrc:/etc/tor/torrc:ro
+      - ${TOR_DATA_DIR}:/data
+    environment:
+      HOME: "/tmp"
+    hostname: "${APP_ID}.tor"
