--- a/samourai-server/torrc.template
+++ b/samourai-server/torrc.template
@@ -1,11 +1,9 @@
+SocksPort   0.0.0.0:9050
+
 # samourai-server dojo Hidden Service
-HiddenServiceDir /data/app-samourai-server-dojo
+HiddenServiceDir /data/app-$APP_ID-dojo
 HiddenServicePort 80 $APP_SAMOURAI_SERVER_IP:80
 
 # samourai-server whirlpool Hidden Service
-HiddenServiceDir /data/app-samourai-server-whirlpool
+HiddenServiceDir /data/app-$APP_ID-whirlpool
 HiddenServicePort 80 $APP_SAMOURAI_SERVER_WHIRLPOOL_IP:$APP_SAMOURAI_SERVER_WHIRLPOOL_PORT
-
-# samourai-server connect Hidden Service
-HiddenServiceDir /data/app-samourai-server
-HiddenServicePort 80 $APP_SAMOURAI_SERVER_IP:8081
