Add Tor container to Suredbits Wallet

--- a/suredbits-wallet/torrc.template
+++ b/suredbits-wallet/torrc.template
@@ -1,7 +1,5 @@
-# suredbits-wallet p2p Hidden Service
-HiddenServiceDir /data/app-suredbits-wallet-p2p
-HiddenServicePort $APP_SUREDBITS_WALLET_P2P_PORT $APP_SUREDBITS_WALLET_SERVER_IP:$APP_SUREDBITS_WALLET_P2P_PORT
+SocksPort   0.0.0.0:9050
 
-# suredbits-wallet Hidden Service
-HiddenServiceDir /data/app-suredbits-wallet
-HiddenServicePort 80 $APP_SUREDBITS_WALLET_IP:3002
+# suredbits-wallet p2p Hidden Service
+HiddenServiceDir /data/app-$APP_ID-p2p
+HiddenServicePort $APP_SUREDBITS_WALLET_P2P_PORT $APP_SUREDBITS_WALLET_SERVER_IP:$APP_SUREDBITS_WALLET_P2P_PORT
