--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -20,7 +20,7 @@ services:
      #MEMPOOL_API_URL: "http://umbrel.local:${APP_MEMPOOL_PORT}/api"
       WALLET_SERVER_API_URL: "http://${APP_SUREDBITS_WALLET_SERVER_IP}:9999/"
       WALLET_SERVER_WS: "ws://${APP_SUREDBITS_WALLET_SERVER_IP}:19999/events"
-      TOR_PROXY: socks5://${TOR_PROXY_IP}:${TOR_PROXY_PORT}
+      TOR_PROXY: "socks5://${APP_ID}.tor:9050"
       DEFAULT_UI_PASSWORD: $APP_PASSWORD
       BITCOIN_S_SERVER_RPC_PASSWORD: $APP_PASSWORD
     networks:
@@ -43,7 +43,7 @@ services:
       BITCOIN_S_TOR_ENABLED: "false"
       BITCOIN_S_TOR_PROVIDED: "true"
       BITCOIN_S_DLCNODE_PROXY_ENABLED: "true"
-      BITCOIN_S_DLCNODE_PROXY_SOCKS5: "${TOR_PROXY_IP}:${TOR_PROXY_PORT}"
+      BITCOIN_S_DLCNODE_PROXY_SOCKS5: "${APP_ID}.tor:9050"
       BITCOIN_S_DLCNODE_EXTERNAL_IP: $APP_SUREDBITS_WALLET_P2P_HIDDEN_SERVICE
       BITCOIN_S_BITCOIND_HOST: $APP_BITCOIN_NODE_IP
       BITCOIN_S_BITCOIND_PORT: $APP_BITCOIN_RPC_PORT
@@ -56,3 +56,14 @@ services:
     networks:
       default:
         ipv4_address: $APP_SUREDBITS_WALLET_SERVER_IP
+  
+  tor:
+    image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
+    user: "1000:1000"
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/torrc:/etc/tor/torrc:ro
+      - ${TOR_DATA_DIR}:/data
+    environment:
+      HOME: "/tmp"
+    hostname: "${APP_ID}.tor"
