Upgrade ItchySats to `0.5.0`

--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: itchysats
 category: Finance
 name: ItchySats
-version: "0.4.16"
+version: "0.5.0"
 tagline: Peer-2-peer derivatives on Bitcoin
 description: >-
   ItchySats enables peer-2-peer CFD trading on Bitcoin using DLCs
@@ -33,14 +33,15 @@ description: >-
 
 
   1. Minimum position quantity is $100, maximum $1000
-
-  2. The leverage is fixed at 2
-
-
+  
+  
   With 0.4.0 your CFDs are perpetual positions that are extended hourly. This means your CFD position will remain open forever unless you decide to close it. A funding fee is collected hourly when the CFD is extended.
 
 
   With 0.4.8 you can open long and short positions, previously only long positions were possible.
+  
+  
+  With 0.5.0 you can chose from different from leverage. Leverage choices are configured by the maker and might initially be restricted to x1, x2 and x3.
 developer: ItchySats
 website: https://itchysats.network
 dependencies:
@@ -56,3 +57,6 @@ path: ""
 defaultUsername: itchysats
 deterministicPassword: true
 torOnly: false
+releaseNotes: >-
+  Users on versions 0.4.x are still supported for the time being, 0.5.0 is not breaking.
+  However, support for previous protocol version will eventually be discontinued, upgrading is encouraged!
