Update LnVisualizer to v0.0.25 (#81)

--- a/ln-visualizer/umbrel-app.yml
+++ b/ln-visualizer/umbrel-app.yml
@@ -2,7 +2,17 @@ manifestVersion: 1
 id: ln-visualizer
 category: Explorers
 name: LnVisualizer
-version: "0.0.23"
+version: "0.0.25"
+releaseNotes: >-
+  - Initial sync performance improvements
+
+  - New control to filter node by feature bits
+
+  - New dropdown for filtering by node network type (tor vs clearnet)
+
+  - Redesigned statistics window. Now it will calculate min/max/total/average for both the entire network and for subgraph being viewed.
+
+  - New settings dropdown to normalize channel color to min/max range of subgraph
 tagline: View the Lightning Network from your node's perspective
 description:
   Your Lightning node is continuously receiving, storing, and transmitting graph information.
