feat: add release notes

--- a/samourai-server/umbrel-app.yml
+++ b/samourai-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: samourai-server
 category: Wallet Servers
 name: Samourai Server
-version: "1.16.0"
+version: "1.16.1"
 tagline: Your private backing server for Samourai Wallet
 description: >-
   Samourai Server is an exclusive Umbrel app that runs Samourai Dojo
@@ -20,7 +20,7 @@ developer: Samourai
 website: https://samouraiwallet.com
 dependencies:
   - bitcoin
-repo: https://github.com/louneskmt/umbrel-samourai-dojo/tree/v1.16.0-umbrel
+repo: https://github.com/louneskmt/umbrel-samourai-dojo/tree/v1.16.1-umbrel
 support: https://t.me/SamouraiWallet
 port: 3005
 gallery:
@@ -31,4 +31,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  Minor release updating Whirlpool CLI to 0.15.0 and including several bugfixes.
+  Minor release including several bugfixes.
