--- a/squeakroad/umbrel-app.yml
+++ b/squeakroad/umbrel-app.yml
@@ -24,5 +24,5 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: ""
-defaultPassword: ""
+defaultUsername: "umbrel"
+deterministicPassword: true
