--- a/squeakroad/docker-compose.yml
+++ b/squeakroad/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_SQUEAKROAD_IP
       APP_PORT: $APP_SQUEAKROAD_PORT
+      PROXY_AUTH_ADD: "false"
 
   web:
     image: ghcr.io/yzernik/squeakroad:v0.0.5@sha256:ae9bad722f41f4113a6f256a3a05dad9cf20fa4cc5467154822dd30fdce1af53
