Re-add environment variable for ItchySats
Unfortunately this one slipped through because we closed a previous upgrade PR that included it.
The missing variable is not critical, i.e. the application works without it, but reports may be incorrect.

--- a/itchysats/docker-compose.yml
+++ b/itchysats/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - --umbrel-seed=$APP_SEED
       - $APP_BITCOIN_NETWORK
       - --electrum=tcp://$APP_ELECTRS_NODE_IP:$APP_ELECTRS_NODE_PORT
+    environment:
+      - ITCHYSATS_ENV=umbrel
 
     networks:
       default:
