Update ItchySats release notes and version

--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: itchysats
 category: Finance
 name: ItchySats
-version: "0.5.0"
+version: "0.5.0-patch-1"
 tagline: Peer-2-peer derivatives on Bitcoin
 description: >-
   ItchySats enables peer-2-peer CFD trading on Bitcoin using DLCs
@@ -58,5 +58,4 @@ defaultUsername: itchysats
 deterministicPassword: true
 torOnly: false
 releaseNotes: >-
-  Users on versions 0.4.x are still supported for the time being, 0.5.0 is not breaking.
-  However, support for previous protocol version will eventually be discontinued, upgrading is encouraged!
+  Minor patch for the app's Umbrel configuration. No changes to the application container.
