Add release notes

--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -27,3 +27,5 @@ gallery:
 path: ""
 defaultUsername: ""
 deterministicPassword: true
+releaseNotes: >-
+	This major update to Thunderhub brings a large number of new features and bug fixes
