--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -13,6 +13,11 @@ description: >-
 
 
   WARNING: This is an Alpha software, don't put too much money in.
+releaseNotes: >-
+  Fixes blockchain parsing bugs with Taproot transactions.
+  Add ability to backup mnemonic seed for wallet.
+  Optimizations around wallet server startup.
+
 developer: Suredbits
 website: https://suredbits.com
 dependencies:
