--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     image: 'rabbitcompany/passky-api:v7.0.0'
     restart: on-failure
     stop_grace_period: 1m
+    ports:
+      - 80:80
     environment:
       # Server
       - SERVER_LOCATION: US
