--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     stop_grace_period: 1m
     environment:
       # Database
-      - MYSQL_DATABASE: passky
-      - MYSQL_USER: passky
+      - MYSQL_DATABASE: "passky"
+      - MYSQL_USER: "passky"
       - MYSQL_PASSWORD: "${APP_PASSWORD}"
       - MYSQL_ROOT_PASSWORD: "${APP_PASSWORD}"
       # Backup
@@ -33,15 +33,15 @@ services:
       - 80:80
     environment:
       # Server
-      - SERVER_LOCATION: US
+      - SERVER_LOCATION: "US"
       - SERVER_CORES: 1
       # Admin Panel
-      - ADMIN_USERNAME: admin
+      - ADMIN_USERNAME: "admin"
       - ADMIN_PASSWORD: "${APP_PASSWORD}"
       # Database
       - MYSQL_HOST: "${APP_PASSKY_DB_IP}"
-      - MYSQL_DATABASE: passky
-      - MYSQL_USER: passky
+      - MYSQL_DATABASE: "passky"
+      - MYSQL_USER: "passky"
       - MYSQL_PASSWORD: "${APP_PASSWORD}"
       # Mail
       - MAIL_ENABLED: false
@@ -49,7 +49,7 @@ services:
       - ACCOUNT_MAX: 100
       - ACCOUNT_MAX_PASSWORDS: 1000
       # YUBICO
-      - YUBI_CLOUD: https://api.yubico.com/wsapi/2.0/verify
+      - YUBI_CLOUD: "https://api.yubico.com/wsapi/2.0/verify"
       - YUBI_ID: 67857
       # Limiter
       - LIMITER_ENABLED: true
