--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       MYSQL_USER: "passky"
       MYSQL_PASSWORD: "${APP_PASSWORD}"
       MYSQL_ROOT_PASSWORD: "${APP_PASSWORD}"
-      BACKUP_ENABLED: false
+      BACKUP_ENABLED: "false"
     volumes:
       - ${APP_DATA_DIR}/data/passky:/var/lib/mysql
     networks:
@@ -38,12 +38,12 @@ services:
       MYSQL_DATABASE: "passky"
       MYSQL_USER: "passky"
       MYSQL_PASSWORD: "${APP_PASSWORD}"
-      MAIL_ENABLED: false
+      MAIL_ENABLED: "false"
       ACCOUNT_MAX: 100
       ACCOUNT_MAX_PASSWORDS: 1000
       YUBI_CLOUD: "https://api.yubico.com/wsapi/2.0/verify"
       YUBI_ID: 67857
-      LIMITER_ENABLED: true
+      LIMITER_ENABLED: "true"
       LIMITER_GET_INFO: 1
       LIMITER_GET_STATS: 1
       LIMITER_GET_TOKEN: 3
