--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     image: 'rabbitcompany/passky-api:v7.0.0'
     restart: on-failure
     stop_grace_period: 1m
+    ports:
+      - 5050:80
     environment:
       SERVER_LOCATION: "US"
       SERVER_CORES: 1
