--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -40,5 +40,5 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: ""
-defaultPassword: ""
+defaultUsername: admin
+deterministicPassword: true
