Made tagline smaller

--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -3,7 +3,7 @@ id: passky-server
 category: Password Managers
 name: Passky Server
 version: "v7.0.0"
-tagline: Passky is simple, modern, lightweight, open source and secure password manager.
+tagline: Simple, modern, lightweight, open source and secure password manager.
 description: >-
   Passky is one of the easiest password manager to use.
   On Passky's main page you can see all your saved passwords,
