feat: bump version and add release notes

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.5.4"
+version: "1.6.3"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -33,3 +33,17 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  1.6.0 is out!
+
+  - Lightning dashboard ⚡️
+  - Invoice receipts
+
+  Plugins:
+  - NFC Support Plugin
+  - Ticket Tailor plugin to sell tickets
+  - LNBank updates
+
+  More details: https://twitter.com/BtcpayServer/status/1545444707169636353?s=20&t=9Ri9Jsz2r8E1AtFtJF_Csw
+
+  Other included updates (1.6.1-1.6.3): Minor improvements and bug fixes and ability to add a discount in the point of sale keypad!
